Fixed bad refer link, spacing and mobile issues

--- a/main.sass
+++ b/main.sass
@@ -114,11 +114,11 @@ p
   img
     width: 195px !important
 
-.dateline
-  font-size: 1.2rem
-  font-style: italic
-  font-weight: 700
-  padding-bottom: 30px
+// .dateline
+//   font-size: 1.2rem
+//   font-style: italic
+//   font-weight: 700
+//   padding-bottom: 10px
 
 .dropcap
   font-size: 16px
@@ -181,11 +181,14 @@ p
 
 .styles__wrapper___1wrBP
   margin-right: 35px
+  @media (max-width: 400px)
+    margin-right: 10%
   img
     text-align: center
     border: 1px solid $black235
     border-radius: 40%
-    // width: 30px
+
+/*
 
 .refer
   font-size: 0.9rem
@@ -362,10 +365,9 @@ p
 
 .story-pubdate
   font-size: 1rem
-  // text-transform: uppercase
   line-height: 1.3
-  padding: 25px 0 10px 0
-  font-weight: 600
+  padding: 5px 0 10px 0
+  font-style: italic
   text-align: left
 
 .tagline
@@ -374,6 +376,8 @@ p
   line-height: 1.3
   padding-bottom: 10px
   margin-top: -20px
+  @media (max-width: 825px)
+    margin-top: -85px
 
 h1.title
   font-size: 2.4rem
